# 5_cw_hh_database

./: .gitignore  README.md  main_menu.py  pyproject.toml
data/: employers.json  vacancies.json
dbmanager/: connect_db.py  create_fill_db.sql  create_tables.py  create_tables.sql  dbmanager.py  queries_dbmanager.sql
parser/: request_hh.py
